pokaze avtorja news

--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -10,5 +10,10 @@
   <%= @news.body %>
 </p>
 
+<p>
+  <strong>Author:</strong>
+  <%= @news.user.email %>
+</p>
+
 <%= link_to 'Edit', edit_news_path(@news) %> |
 <%= link_to 'Back', news_index_path %>
