--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Title</th>
       <th>Body</th>
+      <th>Author</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,8 @@
       <tr>
         <td><%= news.title %></td>
         <td><%= news.body %></td>
+        <td><%= news.user.email %></td>
+
         <td><%= link_to 'Show', news %></td>
         <td><%= link_to 'Edit', edit_news_path(news) %></td>
         <td><%= link_to 'Destroy', news, method: :delete, data: { confirm: 'Are you sure?' } %></td>
