Navbar in avtentikacija

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,13 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
+    <div class="navbar">
+      <%= link_to "Domov" , root_path %>
+      <%= link_to "Prijava" , new_user_session_path %>
+      <%= link_to "Registracija" , new_user_registration_path %>
+      <%= link_to "Odjava" , destroy_user_session_path, method: :delete%>
+    </div>
+
     <p class="alert"><%= alert %></p>
 
     <%= yield %>
