--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,23 @@
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
-  <body>
-    <div class="navbar">
-      <%= display_navbar_options %>
-    </div>
+<body>
+<div class="container">
+    <header class="blog-header py-3">
+        <div class="row flex-nowrap justify-content-between align-items-center">
+          <div class="col-4 text-center">
+            <%= link_to "Domov" , root_path, class: 'blog-header-logo text-dark' %>
+          </div>
+          <div class="col-4 d-flex justify-content-end align-items-center">
+        
+                <%= display_navbar_options %>
+          </div>
+        </div>
+      </header>
 
     <p class="alert"><%= alert %></p>
 
     <%= yield %>
+    </div>
   </body>
 </html>
