--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -2,28 +2,24 @@
 
 <h1>News</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th>Author</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+    <div class="row mb-2">
     <% @news.each do |news| %>
-      <tr>
-        <td><%= news.title %></td>
-        <td><%= news.body %></td>
-        <td><%= news.user.name || 'Anonimna oseba' %></td>
+        <div class="col-md-6">
+            <div class="card flex-md-row mb-4 box-shadow h-md-250">
+                <div class="card-body d-flex flex-column align-items-start">
+                  <strong class="d-inline-block mb-2 text-primary">  <%= news.user.name || 'Anonimna oseba' %></strong>
+                  <h3 class="mb-0">
+                  <%= news.title %>
+                  </h3>
+                  <div class="mb-1 text-muted"><%= news.created_at.strftime('%d.%m.%Y') %></div>
+                  <p class="card-text mb-auto"><%= news.body.truncate(28, seperator: /\s/) %></p>
+                 <%= display_news_links(news) %>
 
-      <%= display_news_links(news) %>
-      </tr>
+            </div>
+          </div>
+        </div>
     <% end %>
-  </tbody>
-</table>
+    </div>
 
 <br>
 
