--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
     <header class="blog-header py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
           <div class="col-4 text-center">
-            <%= link_to "Domov" , root_path, class: 'blog-header-logo text-dark' %>
+            <%= link_to image_pack_tag('logo.png',class: 'logo-navbar') , root_path, class: 'blog-header-logo text-dark'  %>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
-        
+
                 <%= display_navbar_options %>
           </div>
         </div>
