--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Sign up</h2>
+<div class = "container">
+<h1 class= "h3 mb-3 font-weight-normal">Registracija</h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -32,3 +33,7 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+
+
+  
