--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,28 +1,25 @@
-
+<p id="notice"><%= notice %></p>
 
 <h1>Posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+    <div class="row mb-2">
     <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.body %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        <div class="col-md-6">
+            <div class="card flex-md-row mb-4 box-shadow h-md-250">
+                <div class="card-body d-flex flex-column align-items-start">
+                  <strong class="d-inline-block mb-2 text-primary">  <%= post.user.name || 'Anonimna oseba' %></strong>
+                  <h3 class="mb-0">
+                  <%= post.title %>
+                  </h3>
+                  <div class="mb-1 text-muted"><%= post.created_at.strftime('%d.%m.%Y') %></div>
+                  <p class="card-text mb-auto"><%= post.body.truncate(28, seperator: /\s/) %></p>
+                 <%= display_posts_links(post) %>
+
+            </div>
+          </div>
+        </div>
     <% end %>
-  </tbody>
-</table>
+    </div>
 
 <br>
 
