--- a/app/views/news/new.html.erb
+++ b/app/views/news/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New News</h1>
 
+<h1 class= "h3 mb-3 font-weight-normal">Nova Novica</h1>
 <%= render 'form', news: @news %>
-
-<%= link_to 'Back', news_index_path %>
+<br>
+<%= link_to 'Back', news_index_path, class: "btn btn-lg btn-secondary btn-block" %>
