--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,38 @@
-<div class = "container">
+<div class = "form">
 <h1 class= "h3 mb-3 font-weight-normal">Registracija</h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :E_naslov %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <label for="inputEmail" class="visually-hidden">E-naslov</label>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email",class: "form-control" %>
   </div>
 
   <div class="field">
-    <%= f.label :Ime %><br />
-    <%= f.text_field :name, autocomplete: 'name' %>
+  <label for="InputName" class="visually-hidden">Vzdevek</label>
+    <%= f.text_field :name, autocomplete: 'name', class: "form-control" %>
   </div>
 
   <div class="field">
-    <%= f.label :Geslo %>
+    <label for="inputPassword" class="visually-hidden">Geslo</label>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> znakov minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+
+      <em> (<%= @minimum_password_length %> Znakov minimalno)</em>
+    <% end %>
+    <%= f.password_field :password, autocomplete: "new-password" , class: "form-control" %>
   </div>
 
   <div class="field">
-    <%= f.label :Potrdi_geslo %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <label for="inputPassword" class="visually-hidden">Potrdi Geslo</label>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" , class: "form-control" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+<br>
+  <button type = "submit" class="btn btn-lg btn-primary btn-block">
+   Registracija
+    </button>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
 </div>
-
-
-  
