--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Post</h1>
+
+
+<h1 class= "h3 mb-3 font-weight-normal">Nov Post</h1>
 
 <%= render 'form', post: @post %>
-
-<%= link_to 'Back', posts_path %>
+<br>
+<%= link_to 'Back', posts_path , class: "btn btn-lg btn-secondary btn-block" %>
