--- a/app/javascript/scss/_custom.scss
+++ b/app/javascript/scss/_custom.scss
@@ -1,3 +1,14 @@
 .logo-navbar{
   max-height:100px;
 }
+.nasl
+{
+  margin-bottom: 50px;
+  padding-bottom: 10px;
+  text-align: center;
+  border-bottom: 1px solid black;
+}
+.btn
+{
+  margin-right: 10px;
+}
