--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,13 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1>News</h1>
+<h1 class = "nasl">Novice</h1>
+
 
     <div class="row mb-2">
     <% @news.each do |news| %>
         <div class="col-md-6">
             <div class="card flex-md-row mb-4 box-shadow h-md-250">
                 <div class="card-body d-flex flex-column align-items-start">
-                  <strong class="d-inline-block mb-2 text-primary">  <%= news.user.name || 'Anonimna oseba' %></strong>
+                  <strong class="d-inline-block mb-2 text-warning">  <%= news.user.name || 'Anonimna oseba' %></strong>
                   <h3 class="mb-0">
                   <%= news.title %>
                   </h3>
@@ -23,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New News', new_news_path %>
+<%= link_to 'New News', new_news_path , class: "btn btn-lg btn-primary"%>
