--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+<h1 class = "nasl">Posts</h1>
 
     <div class="row mb-2">
     <% @posts.each do |post| %>
         <div class="col-md-6">
             <div class="card flex-md-row mb-4 box-shadow h-md-250">
                 <div class="card-body d-flex flex-column align-items-start">
-                  <strong class="d-inline-block mb-2 text-primary">  <%= post.user.name || 'Anonimna oseba' %></strong>
+                  <strong class="d-inline-block mb-2 text-warning">  <%= post.user.name || 'Anonimna oseba' %></strong>
                   <h3 class="mb-0">
                   <%= post.title %>
                   </h3>
@@ -23,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path, class: "btn btn-lg btn-primary" %>
